2009-06-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-decode.el (mm-dissect-buffer): Use message-fetch-field instead of
	mail-fetch-field to fetch Content-Description header in order to
	exclude newlines.

2009-06-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mime-delete-part): Specify gnus-decoded as charset
	to deleted part.

2009-05-30  David Engster  <dengste@eml.cc>

	* nnmairix.el: Remove old documentation in the commentary block.
	(nnmairix-request-group): Do not update active file for nnml back ends.
	(nnmairix-retrieve-headers): Set gnus-nov-is-evil to t for nnimap back
	end so that overview files are ignored.
	(nnmairix-update-groups): Make updating the groups more robust by using
	marks.
	(nnmairix-determine-original-group-from-path): Circumvent mairix bug
	with dollar characters in message-id.

2009-04-28  Reiner Steib  <Reiner.Steib@gmx.de>

	* spam.el: Use dns-query instead of query-dns.  Was renamed on
	2008-12-25 in dns.el.

2009-04-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* rfc2047.el (rfc2047-decode-region): Don't skip past `start', which
	could happen if the text is only composed of spaces and/or tabs.

2009-03-03  Brian Sniffen  <bts@evenmere.org>  (tiny change)

	* gnus-draft.el (gnus-draft-send): Bind gnus-message-setup-hook to nil
	when sending a queued message to avoid extra mml tags.

2009-03-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mml.el (mml-insert-mime): Don't break parts that mm-uu dissected.

2009-02-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-dired.el: Remove autoload for gnus-setup-message.
	(gnus-dired-attach): Fake this-command value to prevent Gnus from
	displaying Gnus logo; always use compose-mail.

2009-02-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-dired.el: Tell autoload that gnus-setup-message is a macro.

2009-02-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-nocem.el (gnus-nocem-groups): Remove invalid NoCeM groups.
	(gnus-nocem-issuers): List currently active issuers; fix custom type.